# ingenic-toolchain

mips-ingenic-xburst1-linux-glibc2.38-tools-r5.2.1.sr03/mips-linux-gnu/lib/: libatomic.so.1.2.0  libgomp.so.1.0.0
mips-ingenic-xburst1-linux-glibc2.38-tools-r5.2.1.sr03/mips-linux-gnu/lib32/: libgfortran.so.4.0.0  libgomp.so.1.0.0  libstdc++.so.6.0.24
mips-ingenic-xburst1-linux-glibc2.38-tools-r5.2.1.sr03/share/info/: cpp.info  gccint.info
mips-ingenic-xburst1-linux-glibc2.38-tools-r5.2.2/mips-linux-gnu/lib32/: libatomic.so.1.2.0  libgomp.so.1.0.0
mips-ingenic-xburst1-linux-glibc2.38-tools-r5.2.2/share/info/: gccint.info  libgomp.info
mips-ingenic-xburst1-linux-uclibc-ng1.0.50-tools-r5.2.2/mips-linux-uclibc/lib/: libatomic.so.1.2.0  libgomp.so.1.0.0
mips-ingenic-xburst1-linux-uclibc-ng1.0.50-tools-r5.2.2/mips-linux-uclibc/lib32/: libatomic.so.1.2.0  libgomp.so.1.0.0  libstdc++.la
mips-ingenic-xburst1-linux-uclibc-ng1.0.50-tools-r5.2.2/share/info/: dir  gccint.info  ld.info
mips-ingenic-xburst2-linux-glibc2.38-tools-r5.2.1.sr03/mips-linux-gnu/lib/: libstdc++.so.6.0.24
mips-ingenic-xburst2-linux-glibc2.38-tools-r5.2.1.sr03/mips-linux-gnu/lib32/: libgfortran.so.4.0.0  libgomp.so.1.0.0
mips-ingenic-xburst2-linux-glibc2.38-tools-r5.2.1.sr03/share/info/: dir  gcc.info
mips-ingenic-xburst2-linux-glibc2.38-tools-r5.2.2/mips-linux-gnu/lib/: libstdc++.so.6.0.24-gdb.py
mips-ingenic-xburst2-linux-glibc2.38-tools-r5.2.2/mips-linux-gnu/lib32/: libgfortran.so.4.0.0  libgomp.so.1.0.0
mips-ingenic-xburst2-linux-glibc2.38-tools-r5.2.2/share/info/: dir  gcc.info  gccint.info
mips-ingenic-xburst2-linux-uclibc-ng1.0.50-tools-r5.2.2/mips-linux-uclibc/lib32/: libatomic.so.1.2.0  libgfortran.so.4.0.0  libgomp.so.1.0.0  libstdc++.so.6.0.24-gdb.py
mips-ingenic-xburst2-linux-uclibc-ng1.0.50-tools-r5.2.2/share/info/: dir  gcc.info  gccint.info
mips-xburst1-linux-toolchain-r6.2.2/mips-linux-gnu/lib/: libgcc_s.so.1  libgfortran.la  libubsan.so.1.0.0
mips-xburst1-linux-toolchain-r6.2.2/share/info/: bfd.info  gccint.info
mips-xburst1-linux-toolchain-r6.2.2/sysroot/lib/: libasan.la  libc_malloc_debug.so.0  libgomp.so.1.0.0  libm.so.6  libnsl.so.1  libnss_files.so.2  libthread_db.so.1  libutil.so.1
mips-xburst1-linux-toolchain-r6.2.2/sysroot/sbin/: sln
mips-xburst1-linux-toolchain-r6.3.1/lib64/: libcc1.la  libcc1.so.0.0.0
mips-xburst1-linux-toolchain-r6.3.1/mipsel-linux-gnu/lib/: libasan.la  libgfortran.la  libgfortran.so.5.0.0  libgomp.la  libgomp.so.1.0.0  libstdc++.so.6.0.29-gdb.py  libubsan.so.1.0.0
mips-xburst1-linux-toolchain-r6.3.1/share/info/: cppinternals.info  dir  ld.info
mips-xburst1-linux-toolchain-r6.3.1/sysroot/lib/: libanl.so.1  libc_malloc_debug.so.0  libcrypt.so.1  libdl.so.2  libgcc_s.so.1  libm.so.6  libnsl.so.1  libnss_db.so.2  libnss_dns.so.2  libpthread.so.0  librt.so.1  libstdc++.la  libstdc++fs.la
mips-xburst1-linux-toolchain-r6.3.1/sysroot/sbin/: sln
mips-xburst1-uclibc-ng1.0.50-toolchain-r6.3.1/mipsel-linux-uclibc/lib/: libstdc++fs.la
mips-xburst1-uclibc-ng1.0.50-toolchain-r6.3.1/share/info/: as.info  binutils.info  cpp.info  dir  gcc.info  gccint.info  gfortran.info  gprof.info  ld.info  libgomp.info
mips-xburst1-uclibc-ng1.0.50-toolchain-r6.3.1/sysroot/lib/: libgfortran.la  libgomp.la  libstdc++.la  libstdc++.so.6.0.29-gdb.py
mips-xburst2-linux-toolchain-r6.0.0/mips-xburst2-linux-gnu/lib/: libatomic.so.1.2.0  libstdc++.la  libstdc++.so.6.0.30  libstdc++.so.6.0.30-gdb.py
mips-xburst2-linux-toolchain-r6.0.0/share/info/: dir  gcc.info  gccgo.info  gccinstall.info  ld.info
mips-xburst2-linux-toolchain-r6.0.0/sysroot/lib/: libatomic.la
mips-xburst2-linux-toolchain-r6.1.1/lib64/: libcc1.la
mips-xburst2-linux-toolchain-r6.1.1/mips-xburst2-linux-gnu/lib/: libasan.la  libatomic.so.1.2.0  libubsan.la
mips-xburst2-linux-toolchain-r6.1.1/share/info/: cppinternals.info  dir  gprof.info
mips-xburst2-linux-toolchain-r6.1.1/sysroot/lib/: libasan.so.8.0.0  libgcc_s.so.1
mips-xburst2-linux-toolchain-r6.1.1/sysroot/sbin/: ldconfig  sln
mips-xburst2-linux-toolchain-r6.2.1/lib64/: libcc1.so.0.0.0
mips-xburst2-linux-toolchain-r6.2.1/mips-unknown-linux-gnu/lib/: libgo.la  libgomp.la  libgomp.so.1.0.0  libstdc++.so.6.0.30  libstdc++fs.la  libsupc++.la  libubsan.la
mips-xburst2-linux-toolchain-r6.2.1/share/info/: as.info  dir  gccint.info
mips-xburst2-linux-toolchain-r6.2.1/sysroot/lib/: libanl.so.1  libasan.la  libcrypt.so.1  libnss_compat.so.2  libnss_db.so.2  libnss_dns.so.2  libnss_files.so.2  libresolv.so.2  libstdc++.la  (+1 more)
riscv/g32s10-r1.0.3/: .submodule.status
riscv32-unknown-elf-t41-little-core-rc1/lib/: libcc1.so.0.0.0
src/: build.sh  mipslinux-7.2.sh
src/Jz-special/: ChangeLog.ing
src/locals/: ChangeLog  getsource.sh
src/src/libfdt-2017.11/: ChangeLog  Makefile.in  config.h.in  configure  configure.ac
src/src/newlib-2017.11/newlib/libc/aeabi/: Makefile.am  Makefile.in  aeabi_memclr.c  aeabi_memcpy.c  aeabi_memset.c  clibabi_assert.c  clibabi_ctype-gen.c  clibabi_ctype.c  clibabi_errno.c  clibabi_limits.c  clibabi_locale.c  clibabi_math.c  clibabi_setjmp.c  clibabi_signal.c  clibabi_signal_fns.S  clibabi_stdio.c  clibabi_stdlib.c  clibabi_time.c  hidden.h
src/src/newlib-2017.11/newlib/libc/machine/arm/: Makefile.am  Makefile.in  configure  configure.in  memcpx-asm.S  memcpx.c  strcpy.c  strlen.c
src/src/newlib-2017.11/newlib/libc/sys/arm/: Makefile.am  Makefile.in  configure  configure.in
src/src/newlib-2017.11/newlib/libm/machine/mips/: Makefile.am  Makefile.in  configure  r3kc1.h  s_rint.S  w_drem.S  w_sqrt.S  wf_sqrt.S
src/src/prelink-2017.11/src/: Makefile.am  Makefile.in  arch-arm.c  arch-mips.c  cache.c  canonicalize.c  crc32.c  doit.c  dso.c  elf.h  execle_open.c  execstack.c  ftw.c  gather.c  get.c  glob.c  layout.c  main.c  mapfile.c  mapfile.h  md5.h  mkstemps.c  mman.c  plarches.h  prelink-win32.c  prelink-win32.h  prelink.c  prelink.h  space.c  stabs.c  stubs.c  tsearch.c  undoall.c  verify.c  wrap-file.c
src/src/prelink-2017.11/src/rtld/: Makefile.am  Makefile.in  dl-lookupX.h  rtld.c
(+4987 files in other folders)
