AC_PREREQ(2.59)
AC_INIT

AC_CONFIG_HEADERS(config.h)
AC_CONFIG_FILES([Makefile])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AC_ARG_PROGRAM

AC_GNU_SOURCE

AC_PROG_CC
AC_PROG_RANLIB
AC_CHECK_PROG(AR, ar, ar, ${CONFIG_SHELL-/bin/sh} ${srcdir}/../missing ar)

CSL_AC_MAINTAINER_MODE
CSL_AC_PKGVERSION
CSL_AC_BUGURL

AC_PROG_INSTALL

AC_OUTPUT
